{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 89,
  "lineage": "026e36ab-323d-f37d-dcd4-469536488de5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_data_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd0ccab7e2801812",
            "arn": "arn:aws:ec2:us-east-2:175618199995:instance/i-0a44fc461fe5ef6d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 18,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5a8bf61d79cb084",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a44fc461fe5ef6d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.9xlarge",
            "ipv6_address_count": 0,
            "key_name": "se_token1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02069b77ef65b0817",
            "private_dns": "ip-10-0-101-169.us-east-2.compute.internal",
            "private_ip": "10.0.101.169",
            "public_ip": "3.137.173.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05e7acff0a08f7e6d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a1afed8dcf87b96d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027759e2a2eeda757",
            "tags": {
              "Name": "brett-featurebase-data-0"
            },
            "tags_all": {
              "Name": "brett-featurebase-data-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a1afed8dcf87b96d"
            ]
          },
          "dependencies": [
            "aws_key_pair.molecula",
            "aws_security_group.featurebase",
            "data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd0ccab7e2801812",
            "arn": "arn:aws:ec2:us-east-2:175618199995:instance/i-0b06568882c9bfb50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 18,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00912b32e9efd0e86",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b06568882c9bfb50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.9xlarge",
            "ipv6_address_count": 0,
            "key_name": "se_token1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0303dda8e48b23943",
            "private_dns": "ip-10-0-102-39.us-east-2.compute.internal",
            "private_ip": "10.0.102.39",
            "public_ip": "3.145.75.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022d60c2342bb97a9",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a1afed8dcf87b96d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed8c7ba7520da192",
            "tags": {
              "Name": "brett-featurebase-data-1"
            },
            "tags_all": {
              "Name": "brett-featurebase-data-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a1afed8dcf87b96d"
            ]
          },
          "dependencies": [
            "aws_key_pair.molecula",
            "aws_security_group.featurebase",
            "data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd0ccab7e2801812",
            "arn": "arn:aws:ec2:us-east-2:175618199995:instance/i-03ff2f6ff4a69e1cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 18,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-020d852c02f08a77b",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ff2f6ff4a69e1cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.9xlarge",
            "ipv6_address_count": 0,
            "key_name": "se_token1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00caa3046572bd6c0",
            "private_dns": "ip-10-0-103-17.us-east-2.compute.internal",
            "private_ip": "10.0.103.17",
            "public_ip": "18.188.82.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04e3369283ad95029",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a1afed8dcf87b96d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fdfb76edd03f7158",
            "tags": {
              "Name": "brett-featurebase-data-2"
            },
            "tags_all": {
              "Name": "brett-featurebase-data-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a1afed8dcf87b96d"
            ]
          },
          "dependencies": [
            "aws_key_pair.molecula",
            "aws_security_group.featurebase",
            "data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "featurebase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:security-group/sg-0a1afed8dcf87b96d",
            "description": "Allow featurebase inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1afed8dcf87b96d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UI from External",
                "from_port": 10101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "GRPC from Internal",
                "from_port": 20101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from Internal",
                "from_port": 55432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal 2",
                "from_port": 10401,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10401
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal",
                "from_port": 10301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10301
              }
            ],
            "name": "allow_featurebase",
            "name_prefix": "",
            "owner_id": "175618199995",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_featurebase"
            },
            "tags_all": {
              "Name": "allow_featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027826f6e94afbe3f",
            "association_id": "eipassoc-0367b430f3503c0bf",
            "domain": "vpc",
            "id": "eipalloc-027826f6e94afbe3f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c69bef4075b582b1",
            "private_dns": "ip-10-0-101-104.us-east-2.compute.internal",
            "private_ip": "10.0.101.104",
            "public_dns": "ec2-3-129-50-212.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.50.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c94fc21e488f514",
            "association_id": "eipassoc-07ca1c2c0641dc623",
            "domain": "vpc",
            "id": "eipalloc-07c94fc21e488f514",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e84f9f4d4047b96c",
            "private_dns": "ip-10-0-102-201.us-east-2.compute.internal",
            "private_ip": "10.0.102.201",
            "public_dns": "ec2-3-19-224-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.224.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09646e19bf075b5ce",
            "association_id": "eipassoc-0bc1332ec637924e3",
            "domain": "vpc",
            "id": "eipalloc-09646e19bf075b5ce",
            "network_border_group": "us-east-2",
            "network_interface": "eni-081454981d5924ad3",
            "private_dns": "ip-10-0-103-88.us-east-2.compute.internal",
            "private_ip": "10.0.103.88",
            "public_dns": "ec2-52-14-174-87.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.174.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:internet-gateway/igw-0cc74a0273c17d0cd",
            "id": "igw-0cc74a0273c17d0cd",
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027826f6e94afbe3f",
            "connectivity_type": "public",
            "id": "nat-092432faf62a6c477",
            "network_interface_id": "eni-0c69bef4075b582b1",
            "private_ip": "10.0.101.104",
            "public_ip": "3.129.50.212",
            "subnet_id": "subnet-027759e2a2eeda757",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c94fc21e488f514",
            "connectivity_type": "public",
            "id": "nat-01aac08306f7bde6f",
            "network_interface_id": "eni-0e84f9f4d4047b96c",
            "private_ip": "10.0.102.201",
            "public_ip": "3.19.224.176",
            "subnet_id": "subnet-0ed8c7ba7520da192",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09646e19bf075b5ce",
            "connectivity_type": "public",
            "id": "nat-03dc3adf7ae29d2ef",
            "network_interface_id": "eni-081454981d5924ad3",
            "private_ip": "10.0.103.88",
            "public_ip": "52.14.174.87",
            "subnet_id": "subnet-0fdfb76edd03f7158",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c36df76d81672861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-092432faf62a6c477",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c36df76d8167286",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09fe6283a225f45831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01aac08306f7bde6f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09fe6283a225f4583",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff288322a7b0d6371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03dc3adf7ae29d2ef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff288322a7b0d637",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc74a0273c17d0cd",
            "id": "r-rtb-0d877fd95dc2937e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d877fd95dc2937e2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:route-table/rtb-07c36df76d8167286",
            "id": "rtb-07c36df76d8167286",
            "owner_id": "175618199995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092432faf62a6c477",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:route-table/rtb-09fe6283a225f4583",
            "id": "rtb-09fe6283a225f4583",
            "owner_id": "175618199995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01aac08306f7bde6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:route-table/rtb-0ff288322a7b0d637",
            "id": "rtb-0ff288322a7b0d637",
            "owner_id": "175618199995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03dc3adf7ae29d2ef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:route-table/rtb-0d877fd95dc2937e2",
            "id": "rtb-0d877fd95dc2937e2",
            "owner_id": "175618199995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc74a0273c17d0cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aad3bba48de9f948",
            "route_table_id": "rtb-07c36df76d8167286",
            "subnet_id": "subnet-00e3450717bd873ff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0516a1278ce11327a",
            "route_table_id": "rtb-09fe6283a225f4583",
            "subnet_id": "subnet-05e0bd0dbb264f4fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eba00635bbddcc5",
            "route_table_id": "rtb-0ff288322a7b0d637",
            "subnet_id": "subnet-0a9fdcb0ec0f36796"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d76592731f018eb4",
            "route_table_id": "rtb-0d877fd95dc2937e2",
            "subnet_id": "subnet-027759e2a2eeda757"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0340ad7a0e6b4657f",
            "route_table_id": "rtb-0d877fd95dc2937e2",
            "subnet_id": "subnet-0ed8c7ba7520da192"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00105c2b5aa0bad44",
            "route_table_id": "rtb-0d877fd95dc2937e2",
            "subnet_id": "subnet-0fdfb76edd03f7158"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:subnet/subnet-00e3450717bd873ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00e3450717bd873ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:subnet/subnet-05e0bd0dbb264f4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05e0bd0dbb264f4fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:subnet/subnet-0a9fdcb0ec0f36796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a9fdcb0ec0f36796",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:subnet/subnet-027759e2a2eeda757",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-027759e2a2eeda757",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:subnet/subnet-0ed8c7ba7520da192",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0ed8c7ba7520da192",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:subnet/subnet-0fdfb76edd03f7158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0fdfb76edd03f7158",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            },
            "vpc_id": "vpc-06dceeff1915392ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175618199995:vpc/vpc-06dceeff1915392ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cd06c8a87b4e7ca",
            "default_route_table_id": "rtb-0bb0e042f9c03ba49",
            "default_security_group_id": "sg-02a040dab1f43a357",
            "dhcp_options_id": "dopt-098c55a04554813b2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06dceeff1915392ff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb0e042f9c03ba49",
            "owner_id": "175618199995",
            "tags": {
              "Name": "brett-featurebase"
            },
            "tags_all": {
              "Name": "brett-featurebase"
            }
          }
        }
      ]
    }
  ]
}